5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1712_2497.log
== TEST (2019-05-08 14:36:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = ??

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ??
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = 

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo

print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo

print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo

print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:42:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2))

	

-- EXECUTION TIME:
0.274076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2497/main.py", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:42:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:43:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:44:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

print(round(saldo, 2))

	

-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:48:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >= 1 and tempo >= 1 ):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:51:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1
# Atualizacao de saldo
#1,2,3
while (i <= tempo ):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:52:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = 0   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1
# Atualizacao de saldo
#1,2,3
while (i <= tempo ):
	i = i + 1
	rend = qi * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- OUTPUT:
23.01
46.02
69.03
92.04
115.05
138.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1
# Atualizacao de saldo
#1,2,3
while (i <= tempo ):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1
# Atualizacao de saldo
#1,2,3
while (i <= tempo ):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1
# Atualizacao de saldo
#1,2,3
while (i <= tempo ):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1
# Atualizacao de saldo
#1,2,3
while (i <= tempo ):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1
# Atualizacao de saldo
#1,2,3
while (i <= tempo ):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi   # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1
# Atualizacao de saldo
#1,2,3
while (i <= tempo ):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	print(round(saldo, 2))

#print(round(saldo, 2))

	

-- EXECUTION TIME:
0.169751
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
